// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col 正确导出 Col 组件 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 flex 参数 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col"
    style={
      Object {
        "flex": "1 1",
      }
    }
  />
  <div
    className="guree-col"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 offset 参数 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-offset-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-offset-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 offset 参数 2`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-offset-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-offset-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 order 参数 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-order-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-order-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 push 参数 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-push-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-push-1 guree-col-4"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;

exports[`Col 测试 Col 组件 xs sm md lg xl xxl 参数 1`] = `
<div
  className="guree-row"
  style={Object {}}
>
  <div
    className="guree-col guree-col-4 guree-col-xs-1 guree-col-sm-2 guree-col-md-3 guree-col-lg-4 guree-col-xl-5 guree-col-xxl-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-xs-1 guree-col-sm-2 guree-col-md-3 guree-col-lg-4 guree-col-xl-5 guree-col-xxl-6"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-xs-offset-1 guree-col-xs-order-1 guree-col-xs-push-1 guree-col-xs-pull-1 guree-col-xs-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
   
  <div
    className="guree-col guree-col-4 guree-col-sm-offset-1 guree-col-sm-order-1 guree-col-sm-push-1 guree-col-sm-pull-1 guree-col-sm-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-md-offset-1 guree-col-md-order-1 guree-col-md-push-1 guree-col-md-pull-1 guree-col-md-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-lg-offset-1 guree-col-lg-order-1 guree-col-lg-push-1 guree-col-lg-pull-1 guree-col-lg-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-xl-offset-1 guree-col-xl-order-1 guree-col-xl-push-1 guree-col-xl-pull-1 guree-col-xl-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
  <div
    className="guree-col guree-col-4 guree-col-xxl-offset-1 guree-col-xxl-order-1 guree-col-xxl-push-1 guree-col-xxl-pull-1 guree-col-xxl-1"
    style={
      Object {
        "flex": undefined,
      }
    }
  />
</div>
`;
